--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,17 @@
+@font-face {
+    font-family: 'RussoOneRegular';
+    src: url('../fonts/RussoOneRegular.eot');
+    src: url('../fonts/RussoOneRegular.eot') format('embedded-opentype'),
+    url('../fonts/RussoOneRegular.woff2') format('woff2'),
+    url('../fonts/RussoOneRegular.woff') format('woff'),
+    url('../fonts/RussoOneRegular.ttf') format('truetype');
+}
+
 * {
     margin: 0;
     padding: 0;
     border: 0;
-    font-family: 'Russo One', sans-serif;
+    font-family: 'RussoOneRegular', sans-serif;
     vertical-align: baseline;
     box-sizing: border-box;
     user-select: none;
@@ -26,10 +35,12 @@ input:-webkit-autofill:active  {
 }
 
 .main-page,
-.performances,
-.my-works,
-.contacts,
 .about,
+.my-works,
+.pokedex,
+.contacts,
+.thanos-effect,
+.performances,
 .regexp,
 .accessibility {
     display: none;
@@ -38,6 +49,8 @@ input:-webkit-autofill:active  {
 [data-nav-wrapper="main-page"] .main-page,
 [data-nav-wrapper="about"] .about,
 [data-nav-wrapper="my-works"] .my-works,
+[data-nav-wrapper="pokedex"] .pokedex,
+[data-nav-wrapper="thanos-effect"] .thanos-effect,
 [data-nav-wrapper="contacts"] .contacts,
 [data-nav-wrapper="performances"] .performances,
 [data-nav-wrapper="regexp"] .regexp,
@@ -58,16 +71,22 @@ h2 {
     margin: 23px 0 40px;
 }
 
+h2:first-child {
+    margin-right: 100px;
+}
+
 .back-button {
     background: transparent;
     border: none;
     outline: transparent;
     color: white;
     font-size: 16px;
-    position: absolute;
+    position: fixed;
     top: 5px;
     right: 5px;
-    text-align: right;
+    height: 100px !important;
+    border-radius: 50%;
+    overflow: hidden;
     z-index: 1;
 }
 
@@ -90,6 +109,16 @@ h2 {
 .hint {
     font-size: 12px;
     color: gray;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    transition: margin ease-in-out .2s;
+}
+
+a:hover {
+    margin-left: 10px;
 }
 
 /* Main Page */
@@ -222,7 +251,7 @@ body.mobile-platform .nav-menu {
     color: #313131;
     bottom: 5px;
     left: 5px;
-    font-size: 7px;
+    font-size: 8px;
 }
 
 .mobile-platform .main-page .help {
@@ -251,6 +280,11 @@ body.mobile-platform .nav-menu {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    list-style: none;
+    position: relative;
+    transition: opacity .3s ease-out;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
 .my-works button {
@@ -290,6 +324,271 @@ body.mobile-platform .nav-menu {
     left: 120%;
 }
 
+.my-works .item {
+    display: block;
+    width: 50%;
+    position: relative;
+    padding: 10px;
+}
+
+@media screen and (max-width: 800px) {
+    .my-works .item {
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 1100px) {
+    .my-works .item {
+        width: 33%;
+    }
+}
+
+.my-works .item:hover .tags::before,
+.my-works .item:hover .img {
+    opacity: 1;
+    transform: translate3d(0,0,0);
+}
+
+.my-works .item:hover .tags li {
+    animation: .4s delay var(--delay) forwards;
+}
+
+@keyframes delay {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0,0,0);
+    }
+}
+
+.my-works h5 {
+    padding-top: 4px;
+    text-align: center;
+}
+
+.my-works .screen {
+    position: relative;
+    display: block;
+    z-index: 1;
+    box-shadow: 8px 8px 0 rgba(255, 255, 255, 0.15);
+    overflow: hidden;
+}
+
+.my-works .bar {
+    display: block;
+    position: relative;
+    height: 24px;
+    background-color: #ddd;
+    width: 100%;
+    color: #6a6a6a;
+    z-index: 10;
+}
+
+.my-works .bar h2 {
+    text-align: center;
+    font-size: 10px;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 26px;
+    letter-spacing: -.5px;
+    color: #8a8a8a;
+}
+
+.my-works .bar i {
+    height: 12px;
+    width: 12px;
+    display: inline-block;
+    background-color: #ff5f57;
+    border-radius: 50%;
+    position: absolute;
+    top: 6px;
+    left: 10px;
+}
+
+.my-works .bar i::before,
+.my-works .bar i::after {
+    content: " ";
+    display: inline-block;
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    top: 0;
+    border-radius: 50%;
+}
+
+.my-works .bar i::before {
+    left: 16px;
+    background-color: #ffbd2e;
+}
+
+.my-works .bar i::after {
+    content: " ";
+    left: 32px;
+    background-color: #28ca41;
+    top: 0;
+}
+
+.my-works .main {
+    background-size: cover;
+    padding-top: 58%;
+    position: relative;
+    background-position: center center;
+    display: block;
+    width: 100%;
+    border-radius: 0;
+    transform-style: flat;
+}
+
+.my-works .main::before,
+.my-works .main::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.my-works .main::before {
+    z-index: 2;
+    box-shadow: 0 0 50px rgba(0,0,0,.75) inset;
+}
+
+.my-works .main::after {
+    z-index: 0;
+    /*background-image: url()!important;*/
+    background-color: #333;
+    background-blend-mode: initial;
+    background-size: auto 75px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    opacity: 1;
+    transform: translate3d(0,0,0);
+    -webkit-filter: grayscale(.75);
+    filter: grayscale(.75);
+}
+
+.my-works .back {
+    z-index: 1;
+}
+
+.my-works .main img {
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+}
+
+.my-works picture.img {
+    left: -2px;
+    width: calc(100% + 4px);
+    border-radius: 0;
+    opacity: 0;
+    z-index: 3;
+    overflow: hidden;
+    -moz-transform: translate3d(0,-100%,0);
+    -ms-transform: translate3d(0,-100%,0);
+    -webkit-transform: translate3d(0,-100%,0);
+    transform: translate3d(0,-100%,0);
+    -moz-transform-style: flat;
+    -webkit-transform-style: flat;
+    transform-style: flat;
+    -moz-transition: opacity .15s ease-out,-moz-transform .25s cubic-bezier(0,.75,0,1);
+    -o-transition: opacity .15s ease-out,-o-transform .25s cubic-bezier(0,.75,0,1);
+    -webkit-transition: opacity .15s ease-out,-webkit-transform .25s cubic-bezier(0,.75,0,1);
+    transition: opacity .15s ease-out,transform .25s cubic-bezier(0,.75,0,1);
+    top: 0;
+    height: 100%;
+    position: absolute;
+    display: block;
+}
+
+.my-works .img::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(10,10,10,.7);
+    background-blend-mode: luminosity;
+    z-index: 1;
+}
+
+.my-works .tags {
+    opacity: 1;
+    position: absolute;
+    text-align: left;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 8;
+    display: block;
+}
+
+.my-works .tags::before {
+    content: "more...";
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    font-weight: 400;
+    width: 60px;
+    left: calc(50% - 30px);
+    padding: 0 .5em;
+    font-size: .75em;
+    opacity: 0;
+    text-align: center;
+    border-radius: 3px;
+    box-shadow: 1px 1px 0 rgba(0,0,0,.25);
+    background-color: #313131;
+    color: #fff;
+    text-shadow: -1px -1px 0 #3f3f3f, -1px 0 0 #3f3f3f, -1px 1px 0 #3f3f3f, 0 -1px 0 #3f3f3f, 0 0 0 #3f3f3f, 0 1px 0 #3f3f3f, 1px -1px 0 #3f3f3f, 1px 0 0 #3f3f3f, 1px 1px 0 #3f3f3f;
+    -moz-transform: translate3d(0,20px,0);
+    -ms-transform: translate3d(0,20px,0);
+    -webkit-transform: translate3d(0,20px,0);
+    transform: translate3d(0,20px,0);
+    -moz-transition: -moz-transform .225s cubic-bezier(.65,1.55,.5,1.3) .9s,opacity .1s ease-out .9s;
+    -o-transition: -o-transform .225s cubic-bezier(.65,1.55,.5,1.3) .9s,opacity .1s ease-out .9s;
+    -webkit-transition: -webkit-transform .225s cubic-bezier(.65,1.55,.5,1.3),opacity .1s ease-out;
+    -webkit-transition-delay: .9s,.9s;
+    transition: transform .225s cubic-bezier(.65,1.55,.5,1.3) 1.2s,opacity .1s ease-out 1.2s;
+}
+
+.my-works .tags ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: flex-start;
+    align-items: center;
+    height: 100%;
+    margin: 0 auto;
+    padding-top: 30px;
+    width: 90%;
+    position: relative;
+    transform-style: preserve-3d;
+}
+
+.my-works .tags li {
+    display: inline-block;
+    margin: 5px;
+    padding: 0 5px;
+    border: 1px solid white;
+    opacity: 0;
+    backface-visibility: hidden;
+    transform-origin: 50% 50% -10px;
+    transform-style: flat;
+    transform: rotateX(92deg);
+    transition: transform .285s cubic-bezier(.5,1.5,.5,1.5);
+}
+
+
+
 /* contacts */
 
 .contacts .wrapper {
@@ -298,12 +597,6 @@ body.mobile-platform .nav-menu {
     justify-content: center;
     align-items: center;
     margin: auto;
-}
-
-@media screen and (max-width: 420px) {
-    .contacts .wrapper {
-        margin: 100px auto 0;
-    }
 }
 
 .contacts h2 {
@@ -444,6 +737,17 @@ body.mobile-platform .nav-menu {
     font-size: 3vw;
 }
 
+.report iframe {
+    width: calc(100vw - 32px);
+}
+
+.report a {
+    display: block;
+}
+
+.report .hrefs a:not(:first-child) {
+    color: #ea0f1e;
+}
 
 /* Keyframes */
 
