--- a/styles/main.css
+++ b/styles/main.css
@@ -45,6 +45,28 @@ input:-webkit-autofill:active  {
     background-color: #000 !important;
 }
 
+/* Scrollbar style */
+body::-webkit-scrollbar {
+    width: 7px;
+    background-color: transparent;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #262626;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+    background-color: #ea0f1e;
+}
+
+body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: transparent;
+}
+
 .loader,
 .main-page,
 .about,
@@ -92,6 +114,11 @@ h2 {
 
 p, ul, li, input[type="text"], textarea {
     font-family: 'Roboto', sans-serif;
+}
+
+.container {
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 img {
@@ -293,6 +320,14 @@ body.mobile-platform .nav-menu {
 }
 
 /* About page */
+.skills {
+    display: inline-flex;
+    flex-wrap: wrap;
+}
+
+.skills li {
+    margin-left: 22px;
+}
 
 .facts-header {
     text-align: right;
