--- a/styles/main.css
+++ b/styles/main.css
@@ -689,6 +689,7 @@ body.mobile-platform .nav-menu {
     background-image: url('../img/light_dots.png');
     background-size: 100%;
     filter: brightness(200%);
+    z-index: -1;
 }
 
 .contacts .wrapper::before {
