--- a/styles/main.css
+++ b/styles/main.css
@@ -74,6 +74,7 @@ body::-webkit-scrollbar-track {
 .pokedex,
 .contacts,
 .portfolio,
+.RPG,
 .thanos-effect,
 .english-learn,
 .performances,
@@ -92,6 +93,7 @@ body::-webkit-scrollbar-track {
 [data-nav-wrapper="thanos-effect"] .thanos-effect,
 [data-nav-wrapper="english-learn"] .english-learn,
 [data-nav-wrapper="portfolio"] .portfolio,
+[data-nav-wrapper="RPG"] .RPG,
 [data-nav-wrapper="contacts"] .contacts,
 [data-nav-wrapper="performances"] .performances,
 [data-nav-wrapper="regexp"] .regexp,
