--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,3 @@
-@font-face {
-  font-family: 'RussoOneRegular';
-  src: url('../assets/fonts/RussoOneRegular.eot');
-  src: url('../assets/fonts/RussoOneRegular.eot') format('embedded-opentype'),
-    url('../assets/fonts/RussoOneRegular.woff2') format('woff2'),
-    url('../assets/fonts/RussoOneRegular.woff') format('woff'),
-    url('../assets/fonts/RussoOneRegular.ttf') format('truetype');
-}
-
-@font-face {
-  font-family: 'Roboto';
-  src: url('../assets/fonts/Roboto.eot');
-  src: url('../assets/fonts/Roboto.eot') format('embedded-opentype'),
-    url('../assets/fonts/Roboto.woff2') format('woff2'), url('../assets/fonts/Roboto.woff') format('woff'),
-    url('../assets/fonts/Roboto.ttf') format('truetype');
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -218,6 +201,7 @@ a {
 }
 
 .main-page img {
+  display: block;
   width: 50%;
   max-width: 666px;
   max-height: 100vh;
@@ -1122,4 +1106,21 @@ body.mobile-platform .nav-menu {
     opacity: 1;
     transform: scale(1);
   }
+}
+
+@font-face {
+  font-family: 'RussoOneRegular';
+  src: url('../assets/fonts/RussoOneRegular.eot');
+  src: url('../assets/fonts/RussoOneRegular.eot') format('embedded-opentype'),
+    url('../assets/fonts/RussoOneRegular.woff2') format('woff2'),
+    url('../assets/fonts/RussoOneRegular.woff') format('woff'),
+    url('../assets/fonts/RussoOneRegular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../assets/fonts/Roboto.eot');
+  src: url('../assets/fonts/Roboto.eot') format('embedded-opentype'),
+    url('../assets/fonts/Roboto.woff2') format('woff2'), url('../assets/fonts/Roboto.woff') format('woff'),
+    url('../assets/fonts/Roboto.ttf') format('truetype');
 }
