--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -481,7 +481,7 @@ body.mobile-platform .nav-menu {
 
     &::after {
       z-index: 0;
-      background-image: url('../img/monk.png') !important;
+      background-image: url('../assets/img/monk.png') !important;
       background-color: #333;
       background-blend-mode: initial;
       background-size: auto 75px;
@@ -656,7 +656,7 @@ body.mobile-platform .nav-menu {
     display: inline-block;
     width: 100px;
     height: 100px;
-    background: url('../img/monk.png') center no-repeat;
+    background: url('../assets/img/monk.png') center no-repeat;
     background-size: 30px;
     margin: 20px;
   }
@@ -702,7 +702,7 @@ body.mobile-platform .nav-menu {
       margin-top: -191px;
       width: 543px;
       height: 382px;
-      background-image: url('../img/light_dots.png');
+      background-image: url('../assets/img/light_dots.png');
       background-size: 100%;
       filter: brightness(200%);
       pointer-events: none;
@@ -826,7 +826,7 @@ body.mobile-platform .nav-menu {
     content: '';
     width: 20px;
     height: 20px;
-    background: url('../img/send.svg') (center / cover) no-repeat;
+    background: url('../assets/img/send.svg') (center / cover) no-repeat;
     position: absolute;
     top: 12px;
     right: 15px;
