--- a/src/pages/contacts/contacts.pug
+++ b/src/pages/contacts/contacts.pug
@@ -1,10 +1,10 @@
 section.contacts
     .wrapper
         .social-links.animate
-            a.social-link.linkedin(href='https://www.linkedin.com/in/golovkoivan' title='link to linkedin profile')
+            a.social-link.linkedin(href='https://www.linkedin.com/in/holovkoivan/' title='link to linkedin profile')
                 svg
                     use(xlink:href='#linkedin')
-            a.social-link.github(href='https://github.com/IvanNavin' title='link to github profile')
+            a.social-link.github(href='https://github.com/IvanNavin/' title='link to github profile')
                 svg
                     use(xlink:href='#github')
             a.social-link.instagram(href='https://www.instagram.com/oivanholovko/' title='link to instagram profile')
