--- a/src/pages/main/main.pug
+++ b/src/pages/main/main.pug
@@ -30,3 +30,34 @@ section.main-page
               span(data-name-button=button.firstName data-second-name-button=button.secondName)
     span.tap-indication  anywhere
     p.help Press &quot;P&quot; for Pause. Press &quot;Space&quot; for new effect
+    //В хедере у нас есть плюсик
+    //При наведении на него У нас есть пункт Bulk IOI
+    //Нажав на него У нас открываются попап
+    //Папа очень похож на баскет импорт - Но на самом деле он улучшенный.
+    //сверху над таблицей у нас есть кнопки файл импорт, добавить новую строку, удалить, вставить данные из буфера обмена и удалить все строки.
+    //Поле ввода аккаунт для всех rows и имя Баскет импорта.
+    //Нажав правой кнопкой мышки на Grid у нас появится контекстное меню
+    //если Grid пустой  то там будет только один пункт add new
+    //Нажав на этот пункт у нас Появится новый row
+    //Точно такой же функционал У нас есть над таблицей в виде плюсика
+    //В добавленных строках уже по умолчанию есть заполненные поля
+    //IOIType Содержит натурал или нон-натурал
+    //Symbol и Account валидируются и их свойства можно вводить маленькими и большими буквами
+    //Side Содержит Buy & sell Нужно ли сюда добавлять ещё один пункт?
+    //ioiQty Может быть только цифрой! Если значение ioiQty  минусовое тогда side меняется на sell а если значение равно 0 то ячейка имеет варнинг
+    //ioiPrice Можно ли бриться цифрой или МКТ
+    //Comments Свободное поле которое может быть любой текст
+    //QualifierCode Содержит QualifierCodes Зависимости от выбранного code мы можем редактировать остальные поля.
+    //В Timestamp Я добавил регулярное выражение Если значение не соответствует правильному Формату времени тогда будет вставлено текущее время.
+    //
+    //Вернёмся в контекстному меню
+    //Если у нас есть выделенные строки Мы можем Изменить IOIType и QualifierCode выбраных строк.
+    //А также мы можем удалить данные строки экспортировать таблицу в Excel файл
+    //Над таблицей у нас есть фильтры нажав на которые можно фильтровать строки
+    //
+    //Давайте удалим все строки И займёмся импортом данных
+    //Нажав на скрепку мы можем импортировать файл
+    //А если мы перетащим на наш грид Несколько файлов эти данные тоже импортируются
+    //Буфер обмена Здесь тоже работает
+    //Я сделал фильтр загружаемых данных. Если приходит известное значение я его сразу подставляю в нужные ячейки. К к примеру мы знаем что натурал находится в колонке ioiType или H3 находится в колонке QualifierCode. Дальше мы знаем что цифры могут быть только в ioiQty и в ioiPrice. Остальные данные подставляются в свободные ячейки
+
