--- a/src/pages/myWorks/myWorks.pug
+++ b/src/pages/myWorks/myWorks.pug
@@ -8,9 +8,9 @@
       },
       {
           name: 'Portfolio',
-          status: 'New',
+          status: 'in process',
           dataHref: 'portfolio',
-          stack: ['HTML', 'CSS', 'JS', 'Canvas', 'Animations'],
+          stack: ['HTML', 'PUG', 'SCSS', 'JS', 'Canvas', 'Animations', 'Webpack', 'Es-Lint', 'Prettier'],
       },
       {
           name: 'Pokedex',
