--- a/src/pages/works/pokedex/pokedex.pug
+++ b/src/pages/works/pokedex/pokedex.pug
@@ -2,36 +2,40 @@ section.work.pokedex
     .container
         h2#pokedex Pokedex
         p
-            | Я считаю, что это важно иметь профессиональный сайт портфолио, который отображает все мои проекты и достижения.
+            | Pokedex - это результат продвинутого Реакт марафона, который проводит Зар Захаров
+        p В этом марафоне мне очень понравился дизайн и новые технологии Реакт
+        p
+            | В дизайне был kit - набор и названия всех цветов, градиентов, шрифты и их размеры и т.д.
+        p Входе марафона я реализовал в этом проэкте следующие технологии:
+        br
+        ul(classname='{s.ul}')
+            li React
+            li Hook
+            li HookRouter
+            li Redux
+            li Webpack
+            li TypeScript
+            li ESLint
+            li Axios
+            li Jest
+            li SSR
+            li Hapi
+        p На самом деле в этом марафоне много интересных моментов.
+        p Весь проэкт написан на хуках.
+        p
+            | В последствии мне это чень помогло - когда я перешёл в новую комманду по реакту, я тут же начал переводить хоки
+            | на хуки. Впоследствии я смог поделиться этими знаниями с коллективом.
+        br
         br
         p
-            | Сначала я и не представлял как должен выглядеть сайт партфолио и что в нём должно быть. Я начал гуглить и читать статьи, что должно быть в портфолио.
+            | К сожалению апишка написана с http протоколом и на https не работает ниже видео демонстрация работающего проекта
+        br#examplePokedex
+        br
         br
         p
-            | Я составил план, определился с цветовой схемой, набросал пару идей. И принялся за разработку. Я понимал, что Он должен быть уникальным и креативным. Фух, это было сложно!
-        br
-        p
-            | Сначала пользователь попадает на главную страницу. Я подумал - это должно быть что-то креативное и уникальное, в моем случае я использовал эффект fluid. Библиотеки я такой не нашёл, но нашёл места где этот эффект приминялся и по заимствовал его от туда - немного преобразив его по своему. Тут на главной странице, можно взаимодействовать с анимацией, нажатием на SPACE - появятся вспышки флюид-анимаций, нажатием на "Р" можно остановить анимацию, как бы нажав на паузу. Ну и естественно нажав и проведя по экрану мышкой анимация приводится к действию.
-        br
-        p
-            | Дальше пользователь может перейти на страницу «Обо мне» - на этой странице будет личная история, стэк технологий которыми я владею, опыт в работе и случайные факты обо мне =)
-        br
-        p
-            | На этом этапе я подумал, что было бы хорошо добавить кнопку назад. Нашёл интересную канвас анимацию и применил её к кнопке "Назад".
-        br
-        p
-            | Пользователь может перейти на страницу проектов (здесь будут жить все лучшие проекты с описанием используемых технологий и ссылками на Github и живые видеодемонстрации).
-        br
-        p Пользователь может перейти на страницу «контакты» и связаться со мной.
-        br
-        p
-            | Пользователь может перейти на страницу моих докладов и почерпнуть те знания которыми я делюсь с другими.
-        br
-        p
-            | В начале написания кода я незнал, каким стэком будет обладать мой сайт портфолио. Я очень хотел написать его на React но поймите меня правильно во время написания кода я владел базовыми знаниями React и вполне достаточными знаниями ES6. Я понимал, что мне нужно настраивать и добавлять функции так, что бы это демонстрировало мои навыки в программировании. Поэтому я написал его на нативном JS
-        br
-        p
-            | Основная цель этого веб-сайта-портфолио - продемонстрировать проекты, которые я создал, ну и конечно же сам сайт также считается проектом!
+            | В ходе написания данного проекта я самостоятельно добавил на своё усмотрение фильтр по типам и атаке, а так-же
+            | сделал модальные окна через "createPortal".
+        p В будующем я планирую добавить в проект бесконечную подгрузку и storyBook
         br
         a(href='' target='_blank')
             svg(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 500 500')
