--- a/src/pages/works/RPG/RPG.pug
+++ b/src/pages/works/RPG/RPG.pug
@@ -1,24 +1,12 @@
+include ../btn
+
 section.work.RPG
     .container
         h2#rpg RPG Online Game
-        // <p>English learn - это результат Реакт-марафона от Зара Захарова</p>
-        // <p>В ходе этого марафона мы познакомились с React и его жизненными циклами, научились работать с формами и с сервером "Firebase". Научились работать с пропсами и стейтом, пробрасывали их через компоненты и обратно. Для начала написали самописный редакс, что бы понимать как он работает и в последствии подключили его. Иконки и формы мы брали из коллекции AntDesign. Подключили апишку словаря и использовали хранилище firebase для запоминания слов юзера. Прикрутили React Router и Thunk.</p>
-        // <br/>
-        // <p>Что бы использовать возможности сайта, нужно внести неизвестное английское слово в поле ввода. Далее это слово появится в базе данных "Firebase" и под полем ввода. Если кликнуть на слово, карточка перевернётся и с другой стороны карточки будет уже слово на русском языке. Далее это слово можно вычеркнуть, как запомненное или удалить как ненужное. Тогда это слово удалится и из базы ваших слов.</p>
-        // <br/>
-        // <p>Логин: reactmarathon@gmail.com</p>
-        // <p>Пароль: 12345678</p>
-        // <br/>
-        // <p>На данный момент, я обратил внимание, что слова юзера появляются после перезагрузки страницы</p>
-        a(href='https://r-p-g-game.herokuapp.com/' target='_blank')
-            svg(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 500 500')
-                defs
-                    path#textcircle(d='M50,250c0-110.5,89.5-200,200-200s200,89.5,200,200s-89.5,200-200,200S50,360.5,50,250')
-                text(dy='70' textLength='1220')
-                    textpath(xlink:href='#textcircle') Результат смотрим тут
-        a(href='https://github.com/IvanNavin/portfolio/' target='_blank')
-            svg(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 500 500')
-                defs
-                    path#textcircle(d='M50,250c0-110.5,89.5-200,200-200s200,89.5,200,200s-89.5,200-200,200S50,360.5,50,250')
-                text(dy='70' textLength='1220' style='letter-spacing: 38px')
-                    textpath(xlink:href='#textcircle') Код смотрим тут
+        p Здесь получилось написать онлайн игру в которой могут играть сразу несколько человек.
+        p Прикольный опыт работы с сокетами и с серверной частью.
+        p Есть онлайн чат.
+        p Стек: HTML / SASS / JS/ Webpack5 / Websocket(socket.io) / EsLint / Prettier
+        p Что бы проверить работоспособность игры и чата, можно запустить игру на нескольких вкладках.
+        +btn('Результат смотрим тут', 'https://r-p-g-game.herokuapp.com/')
+        +btn('Код смотрим тут', 'https://github.com/IvanNavin/js-pro-game', 'letter-spacing: 38px')
