--- a/src/pages/works/portfolio/portfolio.pug
+++ b/src/pages/works/portfolio/portfolio.pug
@@ -1,3 +1,5 @@
+include ../btn
+
 section.work.portfolio
     .container
         h2#portfolio Portfolio
@@ -33,9 +35,4 @@ section.work.portfolio
         p
             | Основная цель этого веб-сайта-портфолио - продемонстрировать проекты, которые я создал, ну и конечно же сам сайт также считается проектом!
         br
-        a(href='' target='_blank')
-            svg(xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 500 500')
-                defs
-                    path#textcircle(d='M50,250c0-110.5,89.5-200,200-200s200,89.5,200,200s-89.5,200-200,200S50,360.5,50,250')
-                text(dy='70' textLength='1220' style='letter-spacing: 38px')
-                    textpath(xlink:href='#textcircle') Код смотрим тут
+        +btn('Код смотрим тут', 'https://github.com/IvanNavin/portfolio', 'letter-spacing: 38px')
