little refactored code

--- a/src/components/preloader/preloader.pug
+++ b/src/components/preloader/preloader.pug
@@ -63,5 +63,4 @@ section.loader
             .preloader__sector
             .preloader__sector
     .progress
-        | Подождите немного, идёт загрузка:
-        span(data-progress='') 0%
+        | Подождите немного, идёт загрузка
