--- a/src/pages/about/about.pug
+++ b/src/pages/about/about.pug
@@ -3,10 +3,11 @@
         "HTML",
         "Twig",
         "Pug",
+        "CSS",
         "Less",
         "Sass",
-        "JQuery",
         "JS / ES6 +",
+        "JQuery",
         "React",
         "Redux",
         "Thunk",
@@ -18,7 +19,7 @@
         "Webpack",
         "EsLint",
         "Prettier",
-      ];
+    ];
 
 section.about
     .container
