--- a/src/pages/main/main.pug
+++ b/src/pages/main/main.pug
@@ -26,7 +26,7 @@ section.main-page
     canvas#fluid
     h1.nav-menu(data-nav-menu='')
       each button in buttons
-          button(data-href=button.dataHref)
+          button(data-href=button.dataHref style="background: transparent; outline: transparent; border-color: transparent;")
               span(data-name-button=button.firstName data-second-name-button=button.secondName)
     span.tap-indication  anywhere
     p.help Press &quot;P&quot; for Pause. Press &quot;Space&quot; for new effect
